add e-mail contact (mailto)

--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
 </head>
 <body>
     <div class="banner"></div>
+    <a href="mailto:contato@gernika.ong.br">
+        <p class="email">contato@gernika.ong.br</p>
+    </a>
 </body>
 </html>
