--- a/index.html
+++ b/index.html
@@ -5,12 +5,63 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300;400;700&display=swap" rel="stylesheet">
     <title>Gernika</title>
 </head>
 <body>
-    <div class="banner"></div>
-    <a href="mailto:contato@gernika.ong.br">
-        <p class="email">contato@gernika.ong.br</p>
-    </a>
+    <div id="main">
+    <div class="principal">
+        <div class="esquerda">
+            <div class="titulo-master"><h1>Semana<br>Gernika<br>Viva</h1>            <br><span>85 anos</span>
+            </div>
+            <div class="texto">
+                <p>Atos, atividades culturais,
+                    artísticas e políticas pela cidade de São Paulo</p>
+            </div>
+        </div>
+        <div class="direita">
+            <h2>25/4 à 3/5</h2>
+            <h3>2022 – São Paulo</h3>
+            <button id="rvsp">Salvar a data</button>
+        </div>
+    </div>
+</div>
+
+    <div class="rodape">
+       <div class="realizacao">
+           <h4>ORGANIZAÇÃO</h4>
+           <img src="/imagens/CamaraSP_LOGO_300x200.jpg" alt="">
+       </div>
+       <div class="apoio">
+        <h4>APOIO INSTITUCIONAL</h4>
+        <img src="/imagens/CamaraSP_LOGO_300x200.jpg" alt="">
+    </div>
+    <div class="apoio-realizacao">
+        <h4>APOIO E REALIZAÇÃO</h4> 
+        <img src="/imagens/CamaraSP_LOGO_300x200.jpg" alt="">
+        <img src="/imagens/CamaraSP_LOGO_300x200.jpg" alt="">
+        <img src="/imagens/CamaraSP_LOGO_300x200.jpg" alt="">
+        <img src="/imagens/CamaraSP_LOGO_300x200.jpg" alt="">
+    </div>
+    <div class="open-source">
+        <h4>UMA INICIATIVA</h4> 
+        <img src="/imagens/Opensource 1.png" alt="">
+    </div>
+
+    
+    <div class="fale-conosco">
+        <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
+        <a href="#"><i class="fa-solid fa-at"></i></a>
+
+        <a href="#"><i class="fa-brands fa-twitter"></i></a>
+        <a href="#"><i class="fa-brands fa-instagram"></i></a>
+    </div>
+
+
+
+    </div>
 </body>
 </html>
