add links + mobile rodape e +

--- a/index.html
+++ b/index.html
@@ -17,15 +17,14 @@
     <div id="main">
     <div class="principal">
         <div class="esquerda">
-            <div class="titulo-master"><h1>Semana<br>Gernika<br>Viva</h1>            <br><span>85 anos</span>
+            <div class="titulo-master"><h1>Semana<br>Gernika<br>Viva</h1>            <br><span>85 anos de memória,<br> resistência e liberdade</span>
             </div>
             <div class="texto">
-                <p>Atos, atividades culturais,
-                    artísticas e políticas pela cidade de São Paulo</p>
+                <p>Atividades, exposições, debates e atos pela Paz</p>
             </div>
         </div>
         <div class="direita">
-            <h2>25/4 à 3/5</h2>
+            <h2>26/4 à 2/5</h2>
             <h3>2022 – São Paulo</h3>
             <button id="rvsp">Salvar a data</button>
         </div>
@@ -35,7 +34,7 @@
     <div class="rodape">
        <div class="realizacao">
            <h4>ORGANIZAÇÃO</h4>
-           <img src="/imagens/CamaraSP_LOGO_300x200.jpg" alt="">
+           <img src="/imagens/LOGO GRNK.png" alt="">
        </div>
        <div class="apoio">
         <h4>APOIO INSTITUCIONAL</h4>
@@ -43,10 +42,17 @@
     </div>
     <div class="apoio-realizacao">
         <h4>APOIO E REALIZAÇÃO</h4> 
-        <img src="/imagens/CamaraSP_LOGO_300x200.jpg" alt="">
-        <img src="/imagens/CamaraSP_LOGO_300x200.jpg" alt="">
-        <img src="/imagens/CamaraSP_LOGO_300x200.jpg" alt="">
-        <img src="/imagens/CamaraSP_LOGO_300x200.jpg" alt="">
+        <div class="grupo">
+        <img src="/imagens/logogernika.png" alt="">
+        <img src="/imagens/images.jpg" alt="">
+        <img src="/imagens/AVATAR_960_960PX-180x180.png" alt="">
+        <img src="/imagens/download copy.png" alt="">
+        <img src="/imagens/download-1_1.png" alt="">
+        <img src="/imagens/download-2.png" alt="">
+        <img src="/imagens/Screen Shot 2022-02-24 at 10.28.04.png" alt="">
+    </div>
+
+
     </div>
     <div class="open-source">
         <h4>UMA INICIATIVA</h4> 
@@ -55,11 +61,11 @@
 
     
     <div class="fale-conosco">
-        <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
-        <a href="#"><i class="fa-solid fa-at"></i></a>
+        <a href="https://api.whatsapp.com/send?phone=5511983166642"><i class="fa-brands fa-whatsapp"></i></a>
+        <a href="mailto:casagernika@protonmail.com"><i class="fa-solid fa-at"></i></a>
 
-        <a href="#"><i class="fa-brands fa-twitter"></i></a>
-        <a href="#"><i class="fa-brands fa-instagram"></i></a>
+        <a href="https://twitter.com/casa_gernika"><i class="fa-brands fa-twitter"></i></a>
+        <a href="https://www.instagram.com/casa.gernika/"><i class="fa-brands fa-instagram"></i></a>
     </div>
 
 
